--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -131,6 +131,7 @@
         flex-direction: column;
     -ms-flex-pack: space-evenly;
         justify-content: space-evenly;
+    box-shadow: 0 0 40px 1px #e9e9f0;
   }
 }
 
