--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -58,6 +58,7 @@
     z-index: 10;
     flex-direction: column;
     justify-content: space-evenly;
+    box-shadow: 0 0 40px 1px $shadow;
   }
 }
 
